Learn more section refined

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p class="hero-title">Explore comprehensive and concise articles related to science, technology and art. Create something amazing and learn web design with neurons</p>
                     <button class="neurons-button" _ngcontent-pkh-c18="" mioanalyticstracking="" buttonstylelink="true" class="left-button" _nghost-pkh-c36="">
                         <!---->
-                        <a _ngcontent-pkh-c36="" href="/collections/get-started" title="" target="_self" rel="" tabindex="0" aria-label="Get started with Material Design" class="ng-star-inserted button-style-link">
+                        <a _ngcontent-pkh-c36="" href="https://github.com/vijaysinhkamble" title="" target="_self" rel="" tabindex="0" aria-label="Get started with Material Design" class="ng-star-inserted button-style-link">
                             <span _ngcontent-pkh-c36="" outlined="" tabindex="-1" class="btn-text">
                                 connect <!---->
                             </span>
@@ -157,18 +157,18 @@
                                 <div class="tile-wrapper">
                                     <figure class="card__poster">
                                         <div class="card__poster-container">
-                                            <img class="card__image" src="/img/avicii.jpg"/>
+                                            <img class="card__image" src="/img/gnome.png"/>
                                         </div>
                                     </figure>
                                     <!-- <h3 class="card__tag">Design</h3> -->
                                     <div class="tile-content">
                                         <div class="tile-header-container">
                                             <div class="tile-header">
-                                                <h4 class="header-4">Golden ratio in design</h4>
+                                                <h4 class="header-4">Welcome to GNOME 40</h4>
                                             </div>
                                         </div>
                                         <div class="tile-description-container">
-                                            <p class="tile-description">Simply, the golden ratio is a shape with a proportion of 1 to 1.618.</p>
+                                            <p class="tile-description">GNOME minimizes distractions, so you can concentrate on what's important.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -179,17 +179,17 @@
                                 <div class="tile-wrapper">
                                     <figure class="card__poster">
                                         <div class="card__poster-container">
-                                            <img class="card__image" src="/img/unnamed.gif"/>
+                                            <img class="card__image" src="/img/ubuntu.jpg"/>
                                         </div>
                                     </figure>
                                     <div class="tile-content">
                                         <div class="tile-header-container">
                                             <div class="tile-header">
-                                                <h4 class="header-4">Steve Jobs: Commencement address</h4>
+                                                <h4 class="header-4">Ubuntu 21.10 Release Date</h4>
                                             </div>
                                         </div>
                                         <div class="tile-description-container">
-                                            <p class="tile-description">'You've got to find what you love,' Jobs says</p>
+                                            <p class="tile-description">Ubuntu 21.10 will be released on October 14, 2021</p>
                                         </div>
                                     </div>
                                 </div>
@@ -200,17 +200,17 @@
                                 <div class="tile-wrapper">
                                     <figure class="card__poster">
                                         <div class="card__poster-container">
-                                            <img class="card__image" src="/img/ces.jpg"/>
+                                            <img class="card__image" src="/img/ipados.jfif"/>
                                         </div>
                                     </figure>
                                     <div class="tile-content">
                                         <div class="tile-header-container">
                                             <div class="tile-header">
-                                                <h4 class="header-4">CES 2021 Highlights</h4>
+                                                <h4 class="header-4">Updates are coming soon: iPadOS 15</h4>
                                             </div>
                                         </div>
                                         <div class="tile-description-container">
-                                            <p class="tile-description">Technology and human ingenuity are coming together to turn ideas into actionable outcomes.</p>
+                                            <p class="tile-description">Apple is releasing iOS 15 and iPadOS 15 on September 20th</p>
                                         </div>
                                     </div>
                                 </div>
