--- a/index.html
+++ b/index.html
@@ -50,15 +50,12 @@
                 <div class="hero-container">
                     <h1 class="hero-header" style="font-weight: 500; font-size: 35px;">Neurons<span style="font-weight: 300;">blog</span></h1>
                     <p class="hero-title">Explore comprehensive and concise articles related to science, technology and art. Create something amazing and learn web design with neurons</p>
-                    <button class="neurons-button" _ngcontent-pkh-c18="" mioanalyticstracking="" buttonstylelink="true" class="left-button" _nghost-pkh-c36="">
-                        <!---->
-                        <a _ngcontent-pkh-c36="" href="https://github.com/vijaysinhkamble" title="" target="_self" rel="" tabindex="0" aria-label="Get started with Material Design" class="ng-star-inserted button-style-link">
-                            <span _ngcontent-pkh-c36="" outlined="" tabindex="-1" class="btn-text">
-                                connect <!---->
+                    <button class="neurons-button">
+                        <a href="https://github.com/vijaysinhkamble">
+                            <span class="btn-text">
+                                connect
                             </span>
-                            <!----><!---->
                         </a>
-                        <!----><!---->
                     </button>
                 </div>
             </section> 
